--- a/backend/wp-content/themes/rschip/src/components/header/header.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/header/header.component.pug
@@ -3,16 +3,14 @@ header.header
         .headerFlexContainer
             .headerLogo
                 a(href="/") 
-                    img(src="assets/images/svg/logoWhite.svg", alt="logo")
+                    img(src="assets/images/svg/logo.svg", alt="logo")
             .headerNav
                 nav.headerNavLinks
                     a.headerLink(href="rs/rs.html") RS chip 
                     a.headerLink(href="gtr/gtr.html") GTR Chip 
-                    a.headerLink(href="chip/chip.html") Chip
-                    a.headerLink(href="javascript:void(0)") Tuning 
+                    a.headerLink(href="chip/chip.html") Chip Gas pedal
                     a.headerLink(href="javascript:void(0)") Support 
                     a.headerLink(href="contacts/contacts.html") Contact us
-                    a.headerLink(href="faq/faq.html") faq
                 a.headerNavCart(href="cart/cart.html") 
                     .icon-cart-png
                     .headerNavCart__count 3
