--- a/backend/wp-content/themes/rschip/src/components/header/header.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/header/header.component.sass
@@ -32,6 +32,9 @@ html
     padding-top: 28px
     +sm-block
         text-align: left
+    img
+        max-width: 147px
+        
 .headerNav
     +col()
     +size(9)
