--- a/backend/wp-content/themes/rschip/src/components/chat/chat.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/chat/chat.component.pug
@@ -3,7 +3,7 @@ section.chat
     .btnChat
         .iconChat.svg-iconChat.svg-iconChat-box
     .chatContainer 
-        .chatBtnClose x
+        .chatBtnClose 
         h3.chatTitle 
             span.page_red Chat 
             | with us
@@ -23,6 +23,6 @@ section.chat
             .chatItem
                 i.icon.svg-iconChatGray.svg-iconChatGray-box
                 p Online chat support 24/7
-        a(href="javascript:void(0)").chatBtn.page__btn.page__btn_notTransparent CHAT VIA FACEBOOK
+        a(href="https://www.facebook.com/rschipchiptuningusa/" target="_blank").chatBtn.page__btn.page__btn_notTransparent CHAT VIA FACEBOOK
 
     
