--- a/backend/wp-content/themes/rschip/css/styles-calc.css
+++ b/backend/wp-content/themes/rschip/css/styles-calc.css
@@ -923,6 +923,7 @@
   position: fixed;
   right: 60px;
   bottom: 60px;
+  z-index: 100;
 }
 
 .btnChat {
@@ -945,10 +946,10 @@
   -ms-flex-pack: center;
   justify-content: center;
   position: fixed;
-  right: 80px;
   bottom: 80px;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  right: 10px;
 }
 
 .btnChat .iconChat {
@@ -967,6 +968,7 @@
   line-height: 59px;
   letter-spacing: 0.05em;
   text-align: center;
+  margin-bottom: 9%;
 }
 
 .chatBtnClose {
@@ -979,7 +981,7 @@
   transform: scale(0);
   opacity: 0;
   color: #000;
-  padding: 24px 22px;
+  padding: 25px 25px 40px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   background-color: #fff;
@@ -993,6 +995,7 @@
   text-align: center;
   z-index: 100;
   display: none;
+  max-width: 400px;
 }
 
 .chatContainer .email {
@@ -1011,7 +1014,7 @@
 }
 
 .chatItems {
-  width: 50%;
+  width: 100%;
   margin: 0 auto 30px;
   text-align: left;
 }
@@ -1025,6 +1028,7 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-bottom: 5%;
 }
 
 .chatItem .icon {
@@ -1033,8 +1037,41 @@
 
 .chatBtn {
   color: #000;
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
+}
+
+.chatBtnClose {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  top: 0;
+  right: 0;
+  float: right;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.chatBtnClose::before,
+.chatBtnClose::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  background: #000000;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.chatBtnClose::before {
+  width: 20px;
+  height: 1px;
+}
+
+.chatBtnClose::after {
+  height: 20px;
+  width: 1px;
 }
 
 /*contactCards*/
@@ -5206,6 +5243,19 @@ html:not([data-scroll='0']) .header {
     border-right: 1px solid rgba(255, 255, 255, 0.15);
   }
 
+  .btnChat {
+    right: 30px;
+    bottom: 30px;
+  }
+
+  .chatItems {
+    width: 80%;
+  }
+
+  .chatBtn {
+    width: 50%;
+  }
+
   .contactCardsFlexContainer {
     margin-left: -15px;
     margin-right: -15px;
@@ -6532,6 +6582,10 @@ html:not([data-scroll='0']) .header {
   .cartProductPrice {
     width: -webkit-calc(22.22222% - 46px);
     width: calc(22.22222% - 46px);
+  }
+
+  .btnChat {
+    right: 80px;
   }
 
   .contactCardsFlexContainer {
