--- a/backend/wp-content/themes/rschip/src/components/chat/chat.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/chat/chat.component.sass
@@ -4,6 +4,7 @@
     position: fixed
     right: 60px
     bottom: 60px
+    z-index: 100
 
 .btnChat
     display: none
@@ -16,9 +17,16 @@
     align-items: center
     justify-content: center
     position: fixed
-    right: 80px
-    bottom: 80px 
+   
+    bottom: 80px
     transition: all 0.5s ease
+    
+    right: 10px
+    +sm-block
+        right: 30px
+        bottom: 30px
+    +md-block
+        right: 80px
     .iconChat
         transition: all 0.5s ease
     &:hover
@@ -30,6 +38,7 @@
     line-height: 59px
     letter-spacing: 0.05em
     text-align: center
+    margin-bottom: 9%
 
 .chatBtnClose
     cursor: pointer
@@ -40,7 +49,8 @@
 
     opacity: 0
     color: #000
-    padding: 24px 22px
+    // padding: 0px 25px 40px
+    padding: 25px 25px 40px
     box-sizing: border-box
     background-color: #fff
     box-shadow: 0px 14px 60px rgba(0, 0, 0, 0.13)
@@ -52,6 +62,8 @@
     z-index: 100
     display: none
 
+    max-width: 400px
+
     .email
         color: #000
     .phone
@@ -60,17 +72,48 @@
         transform: scale(1)
         opacity: 1
         display: block
-        
+
 .chatItems
-    width: 50%
+    width: 100%
     margin: 0 auto 30px
     text-align: left
+    +sm-block
+        width: 80%
 .chatItem
     display: flex
     align-items: center
+    margin-bottom: 5%
     .icon
         min-width: 50px
 .chatBtn
     color: #000
-    width: 50%
+    width: 100%
     margin: 0 auto
+    +sm-block
+        width: 50%
+.chatBtnClose
+    position: relative
+    width: 30px
+    height: 30px
+    top: 0
+    right: 0
+    float: right
+    transform: rotate(45deg)
+    &::before,
+    &::after
+        content: ""
+        position: absolute
+        display: inline-block
+        background: #000000
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+
+    &::before
+        // transform: rotate(45deg)
+        width: 20px
+        height: 1px
+    &::after
+        // transform: rotate(45deg)
+        height: 20px
+        width: 1px
