--- a/backend/wp-content/themes/rschip/src/components/modals/modal.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/modals/modal.component.sass
@@ -70,7 +70,7 @@
 .modalCarCantfind 
     padding: 60px 70px
     text-align: center
-
+    
     .page__btn
         color: #000
 
@@ -84,14 +84,20 @@
         display: flex
         align-items: center
         margin-bottom: 5%
+
     .modalContent
         img 
             margin: 0
 
-    .page__input
+    .wpcf7-form-control-wrap
         margin: 0 10px
+        text-align: left
+
+    .page__input
+        
         width: 100%
-        max-width: 109px
+        
+        color: #000
         &::placeholder
             color: #B2B2B2
         &:first-child
