--- a/backend/wp-content/themes/rschip/src/components/modals/modalCarCantfind.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/modals/modalCarCantfind.component.pug
@@ -5,12 +5,34 @@
     p Please fill in the fields below and we will call you back
     form(action="")
         .formRow
-            input.page__input(type="text" placeholder="Your Car") 
-            input.page__input(type="text" placeholder="Year") 
-            input.page__input(type="text" placeholder="Horsepower") 
-            input.page__input(type="text" placeholder="Torque") 
+            span.wpcf7-form-control-wrap
+                label
+                    div Your car *
+                input.page__input(type="text" placeholder="Your Car") 
+
+            span.wpcf7-form-control-wrap
+                label
+                    div Year *
+                input.page__input(type="text" placeholder="Year")
+
+            span.wpcf7-form-control-wrap
+                label 
+                    div Horsepower (hp)
+                input.page__input(type="text" placeholder="Horsepower") 
+
+            span.wpcf7-form-control-wrap
+                label   
+                    div Torque (Nm)
+                input.page__input(type="text" placeholder="Torque") 
         .formRow
-            input.page__input(type="email" placeholder="Email") 
+            span.wpcf7-form-control-wrap
+                label
+                    div email*
+                input.page__input(type="email" placeholder="Email") 
             img(src="assets/images/png/shared/imgCodeCaptcha.png", alt="imgCodeCaptcha")
-            input.page__input(type="text" placeholder="code") 
+            span.wpcf7-form-control-wrap
+                label
+                    div Captcha
+                input.page__input(type="text" placeholder="code") 
+
         button.page__btn SUBMIT
