--- a/backend/wp-content/themes/rschip/src/sass/_allComponents.sass
+++ b/backend/wp-content/themes/rschip/src/sass/_allComponents.sass
@@ -1836,7 +1836,7 @@ html
 .modalCarCantfind 
     padding: 60px 70px
     text-align: center
-
+    
     .page__btn
         color: #000
 
@@ -1850,14 +1850,20 @@ html
         display: flex
         align-items: center
         margin-bottom: 5%
+
     .modalContent
         img 
             margin: 0
 
-    .page__input
+    .wpcf7-form-control-wrap
         margin: 0 10px
+        text-align: left
+
+    .page__input
+        
         width: 100%
-        max-width: 109px
+        
+        color: #000
         &::placeholder
             color: #B2B2B2
         &:first-child
