--- a/backend/wp-content/themes/rschip/src/components/form/form.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/form/form.component.sass
@@ -11,7 +11,8 @@
 
     .page__from
         +row-flex
-    .page__input
+        
+    .field
         +col
         +size(9)
         margin-bottom: 36px
@@ -47,5 +48,6 @@
     +size(9)
     +size-md(3)
     display: none
+    align-items: center
     +md-block
         display: flex
