--- a/backend/wp-content/themes/rschip/src/components/modals/modal.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/modals/modal.component.sass
@@ -80,20 +80,13 @@
         line-height: 59px
 
 
-    .formRow
-        display: flex
-        align-items: center
-        margin-bottom: 5%
-
     .modalContent
         img 
             margin: 0
 
-    .wpcf7-form-control-wrap
-        margin: 0 10px
-        text-align: left
 
-    .page__input
+    .page__input,
+    input   
         
         width: 100%
         
