--- a/backend/wp-content/themes/rschip/src/sass/blocks/page.sass
+++ b/backend/wp-content/themes/rschip/src/sass/blocks/page.sass
@@ -147,44 +147,10 @@
             background: linear-gradient(45deg,#700ED2,#FF3838) border-box
     &__from
         margin: 0
-    &__input,
-    input
-        font-family: #{$SFUIText}-Regular
-        font-style: normal
-        font-weight: normal
-        font-size: 15px
-        line-height: 193%
-        letter-spacing: 0.02em
-        color: #fff
-        background-color: transparent
+        
 
-        padding-bottom: 5px
-        box-sizing: border-box
-        border: none
-        border-bottom: 1px solid #474747
 
-        &::placeholder
-            color: #fff
 
-    &__textarea,
-    textarea
-        font-family: #{$SFUIText}-Regular
-        font-style: normal
-        font-weight: normal
-        font-size: 15px
-        line-height: 193%
-        letter-spacing: 0.02em
-        color: #fff
-        background-color: transparent
-
-        box-sizing: border-box
-        border: none
-        border-bottom: 1px solid #474747
-
-        resize: none
-        height: 116px
-        &::placeholder
-            color: #fff
 
     &_red
         color: transparent
@@ -205,4 +171,43 @@
         background-clip: text
         border: none
 
+.page__input,
+input
+    width: 100%
+    font-family: #{$SFUIText}-Regular
+    font-style: normal  
+    font-weight: normal
+    font-size: 15px
+    line-height: 193%
+    letter-spacing: 0.02em
+    color: #fff
+    background-color: transparent
+
+    padding-bottom: 5px
+    box-sizing: border-box
+    border: none
+    border-bottom: 1px solid #474747
+
+    &::placeholder
+        color: #fff
+
+.page__textarea,
+textarea
+    font-family: #{$SFUIText}-Regular
+    font-style: normal
+    font-weight: normal
+    font-size: 15px
+    line-height: 193%
+    letter-spacing: 0.02em
+    color: #fff
+    background-color: transparent
+
+    box-sizing: border-box
+    border: none
+    border-bottom: 1px solid #474747
+
+    resize: none
+    height: 116px
+    &::placeholder
+        color: #fff
 /* __page__ */
