--- a/backend/wp-content/themes/rschip/css/styles-calc.css
+++ b/backend/wp-content/themes/rschip/css/styles-calc.css
@@ -1664,7 +1664,7 @@
   margin-right: -10px;
 }
 
-.form .page__input {
+.form .field {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   word-wrap: break-word;
@@ -1736,6 +1736,10 @@
   width: -webkit-calc(100% - 20px);
   width: calc(100% - 20px);
   display: none;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 /*gallary*/
@@ -2424,53 +2428,43 @@ html:not([data-scroll='0']) .header {
   line-height: 59px;
 }
 
-.modalCarCantfind .formRow {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-bottom: 5%;
-}
-
 .modalCarCantfind .modalContent img {
   margin: 0;
 }
 
-.modalCarCantfind .wpcf7-form-control-wrap {
-  margin: 0 10px;
-  text-align: left;
-}
-
-.modalCarCantfind .page__input {
+.modalCarCantfind .page__input,
+.modalCarCantfind input {
   width: 100%;
   color: #000;
 }
 
-.modalCarCantfind .page__input::-webkit-input-placeholder {
+.modalCarCantfind .page__input::-webkit-input-placeholder,
+.modalCarCantfind input::-webkit-input-placeholder {
   color: #B2B2B2;
 }
 
-.modalCarCantfind .page__input::-moz-placeholder {
+.modalCarCantfind .page__input::-moz-placeholder,
+.modalCarCantfind input::-moz-placeholder {
   color: #B2B2B2;
 }
 
-.modalCarCantfind .page__input:-ms-input-placeholder {
+.modalCarCantfind .page__input:-ms-input-placeholder,
+.modalCarCantfind input:-ms-input-placeholder {
   color: #B2B2B2;
 }
 
-.modalCarCantfind .page__input::-ms-input-placeholder {
+.modalCarCantfind .page__input::-ms-input-placeholder,
+.modalCarCantfind input::-ms-input-placeholder {
   color: #B2B2B2;
 }
 
-.modalCarCantfind .page__input::placeholder {
+.modalCarCantfind .page__input::placeholder,
+.modalCarCantfind input::placeholder {
   color: #B2B2B2;
 }
 
-.modalCarCantfind .page__input:first-child {
+.modalCarCantfind .page__input:first-child,
+.modalCarCantfind input:first-child {
   max-width: 370px;
 }
 
@@ -4766,91 +4760,6 @@ html:not([data-scroll='0']) .header {
   margin: 0;
 }
 
-.page__input,
-.page input {
-  font-family: SFUIText-Regular;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 193%;
-  letter-spacing: 0.02em;
-  color: #fff;
-  background-color: transparent;
-  padding-bottom: 5px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 1px solid #474747;
-}
-
-.page__input::-webkit-input-placeholder,
-.page input::-webkit-input-placeholder {
-  color: #fff;
-}
-
-.page__input::-moz-placeholder,
-.page input::-moz-placeholder {
-  color: #fff;
-}
-
-.page__input:-ms-input-placeholder,
-.page input:-ms-input-placeholder {
-  color: #fff;
-}
-
-.page__input::-ms-input-placeholder,
-.page input::-ms-input-placeholder {
-  color: #fff;
-}
-
-.page__input::placeholder,
-.page input::placeholder {
-  color: #fff;
-}
-
-.page__textarea,
-.page textarea {
-  font-family: SFUIText-Regular;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 193%;
-  letter-spacing: 0.02em;
-  color: #fff;
-  background-color: transparent;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 1px solid #474747;
-  resize: none;
-  height: 116px;
-}
-
-.page__textarea::-webkit-input-placeholder,
-.page textarea::-webkit-input-placeholder {
-  color: #fff;
-}
-
-.page__textarea::-moz-placeholder,
-.page textarea::-moz-placeholder {
-  color: #fff;
-}
-
-.page__textarea:-ms-input-placeholder,
-.page textarea:-ms-input-placeholder {
-  color: #fff;
-}
-
-.page__textarea::-ms-input-placeholder,
-.page textarea::-ms-input-placeholder {
-  color: #fff;
-}
-
-.page__textarea::placeholder,
-.page textarea::placeholder {
-  color: #fff;
-}
-
 .page_red {
   color: transparent;
   background-image: -webkit-gradient(linear, left top, right top, from(#FF4587), to(#FF5438));
@@ -4872,6 +4781,92 @@ html:not([data-scroll='0']) .header {
   -webkit-background-clip: text;
   background-clip: text;
   border: none;
+}
+
+.page__input,
+input {
+  width: 100%;
+  font-family: SFUIText-Regular;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 193%;
+  letter-spacing: 0.02em;
+  color: #fff;
+  background-color: transparent;
+  padding-bottom: 5px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #474747;
+}
+
+.page__input::-webkit-input-placeholder,
+input::-webkit-input-placeholder {
+  color: #fff;
+}
+
+.page__input::-moz-placeholder,
+input::-moz-placeholder {
+  color: #fff;
+}
+
+.page__input:-ms-input-placeholder,
+input:-ms-input-placeholder {
+  color: #fff;
+}
+
+.page__input::-ms-input-placeholder,
+input::-ms-input-placeholder {
+  color: #fff;
+}
+
+.page__input::placeholder,
+input::placeholder {
+  color: #fff;
+}
+
+.page__textarea,
+textarea {
+  font-family: SFUIText-Regular;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 193%;
+  letter-spacing: 0.02em;
+  color: #fff;
+  background-color: transparent;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #474747;
+  resize: none;
+  height: 116px;
+}
+
+.page__textarea::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #fff;
+}
+
+.page__textarea::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #fff;
+}
+
+.page__textarea:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #fff;
+}
+
+.page__textarea::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
+  color: #fff;
+}
+
+.page__textarea::placeholder,
+textarea::placeholder {
+  color: #fff;
 }
 
 /* __page__ */
@@ -4967,6 +4962,23 @@ html:not([data-scroll='0']) .header {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+}
+
+.field {
+  margin: 0 10px;
+  text-align: left;
+}
+
+.formRow {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 5%;
 }
 
 @media screen and (min-width: 768px) {
@@ -5457,17 +5469,17 @@ html:not([data-scroll='0']) .header {
     margin-right: -15px;
   }
 
-  .form .page__input {
+  .form .field {
     margin-left: 15px;
     margin-right: 15px;
   }
 
-  .form .page__input:nth-child(1) {
+  .form .field:nth-child(1) {
     width: -webkit-calc(50% - 30px);
     width: calc(50% - 30px);
   }
 
-  .form .page__input:nth-child(2) {
+  .form .field:nth-child(2) {
     width: -webkit-calc(50% - 30px);
     width: calc(50% - 30px);
   }
@@ -6790,17 +6802,17 @@ html:not([data-scroll='0']) .header {
     margin-right: -23px;
   }
 
-  .form .page__input {
+  .form .field {
     margin-left: 23px;
     margin-right: 23px;
   }
 
-  .form .page__input:nth-child(1) {
+  .form .field:nth-child(1) {
     width: -webkit-calc(50% - 46px);
     width: calc(50% - 46px);
   }
 
-  .form .page__input:nth-child(2) {
+  .form .field:nth-child(2) {
     width: -webkit-calc(50% - 46px);
     width: calc(50% - 46px);
   }
