--- a/backend/wp-content/themes/rschip/src/components/form/form.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/form/form.component.pug
@@ -1,3 +1,4 @@
+include ./field.mixin.pug
 //-form
 section.form 
     .wrapper 
@@ -6,10 +7,32 @@ section.form
                 h2.page__title-h2 Get in touch. 
                     span.page_red Let’s Say Hi!
                 form(action="javascript:void(0)").page__from
-                    input(type="text" placeholder="First Name").page__input
-                    input(type="text" placeholder="Last Name").page__input
-                    input(type="email" placeholder="Email").page__input
-                    textarea(name="message", placeholder="Message").page__textarea
+                    +fields([
+                        {
+                            label: "First Name *",
+                            input: {
+                                placeholder: "First Name"
+                            }
+                        },
+                        {
+                            label: "Last Name *",
+                            input: {
+                                placeholder: "Last Name"
+                            }
+                        },
+                        {
+                            label: "Email *",
+                            input: {
+                                placeholder: "Email"
+                            }
+                        },
+                        {
+                            label: "Message",
+                            textarea: {
+                                placeholder: "Message"
+                            }
+                        }
+                    ])
                     button.page__btn send Message
             .formImg
                  img(src="assets/images/png/shared/imgForm.png", alt="imgForm")
