--- a/backend/wp-content/themes/rschip/css/styles-calc.css
+++ b/backend/wp-content/themes/rschip/css/styles-calc.css
@@ -5474,12 +5474,12 @@ textarea::placeholder {
     margin-right: 15px;
   }
 
-  .form .field:nth-child(1) {
+  .form .field:nth-of-type(1) {
     width: -webkit-calc(50% - 30px);
     width: calc(50% - 30px);
   }
 
-  .form .field:nth-child(2) {
+  .form .field:nth-of-type(2) {
     width: -webkit-calc(50% - 30px);
     width: calc(50% - 30px);
   }
@@ -6807,12 +6807,12 @@ textarea::placeholder {
     margin-right: 23px;
   }
 
-  .form .field:nth-child(1) {
+  .form .field:nth-of-type(1) {
     width: -webkit-calc(50% - 46px);
     width: calc(50% - 46px);
   }
 
-  .form .field:nth-child(2) {
+  .form .field:nth-of-type(2) {
     width: -webkit-calc(50% - 46px);
     width: calc(50% - 46px);
   }
