--- a/backend/wp-content/themes/rschip/src/components/form/form.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/form/form.component.sass
@@ -1,4 +1,5 @@
 /*form*/
+
 .form
     background: #111111
     padding: 100px 0
@@ -16,10 +17,10 @@
         +col
         +size(9)
         margin-bottom: 36px
-        &:nth-child(1)
+        &:nth-of-type(1)
             +size-sm(4.5)
             +size-md(4.5)
-        &:nth-child(2)
+        &:nth-of-type(2)
             +size-sm(4.5)
             +size-md(4.5)
             
