--- a/backend/wp-content/themes/rschip/src/sass/_allComponents.sass
+++ b/backend/wp-content/themes/rschip/src/sass/_allComponents.sass
@@ -1279,6 +1279,7 @@
         line-height: 29px
         letter-spacing: .6px
 /*form*/
+
 .form
     background: #111111
     padding: 100px 0
@@ -1296,10 +1297,10 @@
         +col
         +size(9)
         margin-bottom: 36px
-        &:nth-child(1)
+        &:nth-of-type(1)
             +size-sm(4.5)
             +size-md(4.5)
-        &:nth-child(2)
+        &:nth-of-type(2)
             +size-sm(4.5)
             +size-md(4.5)
             
